[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-toolguard"
version = "0.1.1"
description = "Runtime allowlist and policy for agent tool-calls"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "ai-agent", "toolguard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/toolguard"

[project.scripts]
"toolguard-emit" = "toolguard.connect:emit_main"
toolguard = "toolguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["toolguard"]
